@@ -1,18 +1,12 @@
 ## Getting Started
 
-Welcome to the VS Code Java world. Here is a guideline to help you get started to write Java code in Visual Studio Code.
+The command to run the applications are:
+java --enable-preview --module-path lib/javafx-sdk-19/lib --add-modules javafx.controls,javafx.graphics -jar DeploymentHost.jar
+java --enable-preview --module-path lib/javafx-sdk-19/lib --add-modules javafx.controls,javafx.graphics -jar DeploymentClient.jar
 
 ## Folder Structure
 
-The workspace contains two folders by default, where:
-
 - `src`: the folder to maintain sources
-- `lib`: the folder to maintain dependencies
-
-Meanwhile, the compiled output files will be generated in the `bin` folder by default.
+- `lib`: the folder to maintain dependencies, missing javafx-sdk-19
 
 > If you want to customize the folder structure, open `.vscode/settings.json` and update the related settings there.
-
-## Dependency Management
-
-The `JAVA PROJECTS` view allows you to manage your dependencies. More details can be found [here](https://github.com/microsoft/vscode-java-dependency#manage-dependencies).
